[gd_scene load_steps=5 format=3 uid="uid://crfsotemq1cp7"]

[ext_resource type="Script" path="res://Menu/HUD/Scripts/GameplayHUD.gd" id="1_jdi8r"]
[ext_resource type="Texture2D" uid="uid://wegj6iko3j2u" path="res://Assets/Assets UI/kenney_fantasy-ui-borders/Vector/fantasy-ui-borders.svg" id="2_0kgpt"]
[ext_resource type="PackedScene" uid="uid://dm3inftubtnc1" path="res://Menu/HUD/player_hud.tscn" id="2_aoers"]
[ext_resource type="PackedScene" uid="uid://dtsqun1706yk7" path="res://Menu/HUD/character_selection_container.tscn" id="3_vx3at"]

[node name="GameplayHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_jdi8r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_right = 142.0
offset_bottom = 148.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 24

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_0kgpt")
region_rect = Rect2(164, 300, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="HudContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = -12
alignment = 1

[node name="PlayerContainer0" type="MarginContainer" parent="VBoxContainer/MarginContainer/HudContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer0"]
layout_mode = 2
alignment = 1

[node name="PlayerHUD0" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer0/VBoxContainer" instance=ExtResource("2_aoers")]
visible = false
layout_mode = 2

[node name="CharacterSelectionContainer0" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer0/VBoxContainer" instance=ExtResource("3_vx3at")]
layout_mode = 2

[node name="PlayerContainer1" type="MarginContainer" parent="VBoxContainer/MarginContainer/HudContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer1"]
layout_mode = 2
alignment = 1

[node name="PlayerHUD1" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer1/VBoxContainer" instance=ExtResource("2_aoers")]
visible = false
layout_mode = 2

[node name="CharacterSelectionContainer1" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer1/VBoxContainer" instance=ExtResource("3_vx3at")]
layout_mode = 2

[node name="PlayerContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer/HudContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer2"]
layout_mode = 2
alignment = 1

[node name="PlayerHUD2" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer2/VBoxContainer" instance=ExtResource("2_aoers")]
visible = false
layout_mode = 2

[node name="CharacterSelectionContainer2" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer2/VBoxContainer" instance=ExtResource("3_vx3at")]
layout_mode = 2

[node name="PlayerContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer/HudContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer3"]
layout_mode = 2
alignment = 1

[node name="PlayerHUD3" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer3/VBoxContainer" instance=ExtResource("2_aoers")]
visible = false
layout_mode = 2

[node name="CharacterSelectionContainer3" parent="VBoxContainer/MarginContainer/HudContainer/PlayerContainer3/VBoxContainer" instance=ExtResource("3_vx3at")]
layout_mode = 2

[editable path="VBoxContainer/MarginContainer/HudContainer/PlayerContainer0/VBoxContainer/PlayerHUD0"]
[editable path="VBoxContainer/MarginContainer/HudContainer/PlayerContainer1/VBoxContainer/PlayerHUD1"]
[editable path="VBoxContainer/MarginContainer/HudContainer/PlayerContainer2/VBoxContainer/PlayerHUD2"]
[editable path="VBoxContainer/MarginContainer/HudContainer/PlayerContainer3/VBoxContainer/PlayerHUD3"]
